[gd_scene load_steps=10 format=3 uid="uid://biqdbs27vqtyc"]

[ext_resource type="Texture2D" uid="uid://bpruewpdtau17" path="res://Assets/Sunny Land Collection Files/Sunny Land Collection Files/Packs/Sunnyland/spritesheets/frog-idle.png" id="1_o3gq7"]
[ext_resource type="Script" path="res://Mobs/Frog/Boss/frog_boss.gd" id="1_tj1n7"]
[ext_resource type="Texture2D" uid="uid://dytsomjvmnf7j" path="res://Assets/Sunny Land Collection Files/Sunny Land Collection Files/Packs/Sunnyland/spritesheets/frog-jump.png" id="3_r0inn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lwa4e"]
radius = 22.2036

[sub_resource type="Animation" id="Animation_rbtoo"]
resource_name = "Idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_v0q1n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("JumpSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sq0wh"]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JumpSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="Animation_62bk3"]
resource_name = "Fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JumpSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chlp8"]
_data = {
"Fall": SubResource("Animation_62bk3"),
"Idle": SubResource("Animation_rbtoo"),
"Jump": SubResource("Animation_sq0wh"),
"RESET": SubResource("Animation_v0q1n")
}

[node name="FrogBoss" type="CharacterBody2D"]
script = ExtResource("1_tj1n7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_lwa4e")

[node name="IdleSprite" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2, 2)
texture = ExtResource("1_o3gq7")
hframes = 4

[node name="JumpSprite" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2, 2)
texture = ExtResource("3_r0inn")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_chlp8")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_lwa4e")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
